--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -1,9 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+
 
 html,
 body {
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Open Sans", sans-serif;
   background-color: #fff;
   color: #222;
   font-weight: 200;
