--- a/public/styles/content.module.css
+++ b/public/styles/content.module.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
 .content {
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: #222;
   font-weight: 200;
 }
@@ -56,7 +58,7 @@
 }
 
 .content code {
-  font-family: "Ubuntu Mono", monospace;
+  font-family: "Open Sans", monospace;
   font-size: 85%;
   padding: 0.2em 0.4em;
   margin: 0;
@@ -121,7 +123,7 @@
 }
 
 .content kbd {
-  font-family: "Ubuntu Mono", monospace;
+  font-family: "Open Sans", monospace;
 }
 
 .content img {
